[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.7.0"
rand = "0.8.5"
ggez = "0.7.0"
specs = {version= "0.17.0", features = ["specs-derive", "serde"]}
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
imgui = "0.8.2"
imgui-gfx-renderer = "0.8.2"
pathfinding = "3.0.12"
arrayvec = "0.7.2"
hashbrown = "0.12.1"
